feat: make server-unavailable retry interval configurable

--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -55,6 +55,7 @@ Emulator:
     ]
   ScreenshotDedithering: false
   AdbRestart: false
+  ServerUnavailableRetryInterval: 300
 EmulatorInfo:
   Emulator:
     value: auto
